[gd_scene load_steps=13 format=3 uid="uid://bcd0ywoya4f65"]

[ext_resource type="Script" path="res://Scripts/boss2.gd" id="1_v7o46"]
[ext_resource type="Texture2D" uid="uid://olofe4nfgk68" path="res://Sprites/Enchanted Forest Characters with animations.png" id="2_1ic38"]
[ext_resource type="Texture2D" uid="uid://bjeghg8gb06c0" path="res://Sprites/Light.png" id="2_e8v0v"]
[ext_resource type="Script" path="res://Scripts/MushroomLife.gd" id="4_6hkb4"]
[ext_resource type="Texture2D" uid="uid://wshs4jur2tgo" path="res://Sprites/HealthBar20.png" id="5_44rtb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpmbe"]
size = Vector2(19, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw5ja"]
size = Vector2(19, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_eh4k5"]
radius = 253.0

[sub_resource type="Animation" id="Animation_e14jl"]
resource_name = "Idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [160, 161, 162, 163]
}

[sub_resource type="Animation" id="Animation_nnhpy"]
length = 0.35
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [136, 137, 138, 139]
}

[sub_resource type="Animation" id="Animation_1dg1r"]
resource_name = "Walking"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [164, 165, 166, 167]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ian5"]
_data = {
"Idle": SubResource("Animation_e14jl"),
"RESET": SubResource("Animation_nnhpy"),
"Walking": SubResource("Animation_1dg1r")
}

[node name="Mushroom Boss" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 275
script = ExtResource("1_v7o46")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 16)
scale = Vector2(0.033, 0.00900001)
texture = ExtResource("2_e8v0v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1ic38")
hframes = 16
vframes = 16
frame = 136

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_dpmbe")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_lw5ja")

[node name="Life" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_6hkb4")

[node name="HealthBar" type="Sprite2D" parent="Life"]
position = Vector2(1.13687e-13, -16)
scale = Vector2(2.81818, 2.25)
texture = ExtResource("5_44rtb")
vframes = 20

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.5, 0.5)
color = Color(0.407843, 0, 0.407843, 1)
energy = 0.5
texture = ExtResource("2_e8v0v")

[node name="ActivationBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationBox"]
shape = SubResource("CircleShape2D_eh4k5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_2ian5")
}

[node name="Attack" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="ActivationBox" to="." method="_on_activation_box_area_entered"]
[connection signal="timeout" from="Attack" to="." method="_on_attack_timeout"]
